[package]
name = "pnets_shrunk"
version = "0.1.0"
authors = ["Louis Chauvet <louis.chauvet@free.fr>"]
edition = "2018"
description = "A reducer for petri nets"
documentation = "https://docs.rs/pnets_shrunk/"
readme = "README.md"
homepage = "https://github.com/fomys/pnets/tree/master/pnets_shrunk"
repository = "https://github.com/fomys/pnets"
license = "MIT OR Apache-2.0"
keywords = ["petri", ]
categories = ["mathematics", "science", ]
include = ["src/**/*.rs", "README.md", "LICENSE-APACHE", "LICENSE-MIT"]

[dependencies]
pnets = { path = "../pnets", version = "0.1" }
pnets_tina = { path = "../pnets_tina", version= "0.1" }

clap = "2.33"
indexed_vec = "1.2"
log = "0.4"
